--- a/f/src/App.css
+++ b/f/src/App.css
@@ -3,7 +3,8 @@
   margin: 0 auto; /* 0= no margin at the top or buttom. auto=browser will automatically calculate equal margins on the left and right, thus centering element horizontally*/
   padding: 2rem; /* spacing between border and inner elements (i.e.,children). 2rem means font is 2x the root fontsize (default is 16px so 32px)*/
   text-align: center; /*Aligns text content (and buttons, images, spans) inside the #root element to center*/
-  border: 1px solid;
+  /* border: 1px solid; */
   position: relative;
+  /* height: 1080px; */
 }
 
