Update f/s/c/homePage.css and f/s/c/dropdown.css: Removed dropdown css section because it is already in f/s/c/dropdown.css. Also added borders to dropdown itmes in dropdown.css

--- a/f/src/c/dropdown.css
+++ b/f/src/c/dropdown.css
@@ -22,5 +22,5 @@ div.dropdown:hover .dropbtn-content {display: block;}
 div.dropbtn-content div:hover {
     background-color: rgba(177, 177, 177, 0.616);
     cursor: pointer;
-    /* border: 1px solid; */
+    border: 1px solid;
 }
