--- a/f/src/c/taskCard.css
+++ b/f/src/c/taskCard.css
@@ -37,6 +37,8 @@ div.task-content{
     text-overflow: ellipsis;
     overflow: hidden; 
     white-space: nowrap;
+    /* border: 1px solid red; */
+    width: 100%;
 }
 
 
