Updated f/src/c/header.jsx and header.css: Updated header component to enhance interactivity: added hover effect to title and implemented click handler to navigate to homepage and update current date to current date.

--- a/f/src/c/header.css
+++ b/f/src/c/header.css
@@ -13,6 +13,11 @@ div.header-overlay{
     /* border: 1px solid; */
 }
 
+span.header-title:hover{
+    cursor: pointer;
+    color: rgb(0, 230, 0);
+}
+
 div.clock{
     /* border-bottom: 1px solid; */
     width: 200px;
