--- a/f/src/c/homePage.css
+++ b/f/src/c/homePage.css
@@ -36,7 +36,7 @@ div.homepage-header-row2 button{
 
 
 div.homepage-body {
-    border: 1px solid white ;
+    border: 1px solid white;
     border-radius: 10px;
     background-color: rgb(30, 23, 36);
     display: flex;
@@ -44,21 +44,12 @@ div.homepage-body {
     align-content: flex-start;
 }
 
-div.timeslots {
-    position: relative;
-    width: 70px;
-    height: 900px;
-    /* background-color: rgb(76, 54, 105); */
-    background-color: rgba(99, 99, 99, 0.377);
-
-    border-radius: 10px;
-}
-
 ol.task-list{
     list-style-type: none;
     /* border: 1px solid white; */
     padding-left:0px;
     width: 100%;
+    margin-top:0px
 }
 
 #task-list div.task-card:hover{
