--- a/f/src/c/taskCard.css
+++ b/f/src/c/taskCard.css
@@ -1,68 +1,63 @@
-div.task-row{
-    /* border: 1px solid; */
+div.homepage-body div.task-row{
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
+    /* border: 1px solid white; */
 }
 
-i.fa-plus:hover{
-    cursor: pointer;
-}
-div.task-card {
+div.homepage-body div.task-card {
     display: flex;
     justify-content: space-between;
-    border: 1px solid rgba(255, 255, 255, 0.274);
+    border: 1px solid white;
     border-radius: 4px;
     height: 15px;
     max-width: 355px;
     width: 100%;
+    margin: 0px 0px;
+}
+
+div.homepage-body .task-row:hover button{
+    visibility: visible;
+}
+
+div.homepage-body div.task-content{
+    display: flex;
+    justify-content: flex-start;
+    align-items : center;
+    font-size: 0.7rem;
+    border-radius: 5px;
+}
+
+div.homepage-body div.task-description{
+    /* border: 1px solid; */
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    overflow-wrap: break-word; 
+    -webkit-box-orient: vertical;
+    line-clamp: 2;
+    padding: 1px 5px;
+    text-align: left;
     margin-right: 5px;
 }
 
-div.task-card:hover{
-    color: grey;
-    cursor: pointer;
-}
-
-#task-list button:hover{
-    color: grey;
-    cursor: pointer;
-    border-color: rgba(0, 0, 0, 0);
-}
-
-
-div.task-content{
-    font-size: 0.7rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    overflow: hidden; 
-    white-space: nowrap;
-    /* border: 1px solid red; */
-    width: 100%;
-}
-
-
-button.task-delete-btn{
-    position: relative;
+div.homepage-body div.task-row button{
     background: none;
     right:1px;
-    font-size: 0.6rem;
-    top: 50%;
-    transform: translateY(-50%);
+    font-size: 0.8rem;
     padding: 0px 0px;
-    height: 15px;
-    min-width: 15px;
     border-radius: 0px;
     margin: 0px;
+    visibility: hidden;
 }
 
-span.task-identifier{
-    border-right: 1px solid;
-    margin-right: 3px;
-    margin-left: 3px;
+div .homepage-body div.task-identifier{
+    margin-left: 5px;
 }
-
-
-
-
-
+div.homepage-body div.task-content-divider{
+    height:100%;
+    border: 1px solid;
+    border-right: 0px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
