Updated f/src/c/homepage.jsx/css: Refactored HomePage component to : 1) calculate the datum (top of the homepage body); 2) Removed the list structure of the task cards.

--- a/f/src/c/homePage.css
+++ b/f/src/c/homePage.css
@@ -44,15 +44,7 @@ div.homepage-body {
     align-content: flex-start;
 }
 
-ol.task-list{
-    list-style-type: none;
-    /* border: 1px solid white; */
-    padding-left:0px;
-    width: 100%;
-    margin-top:0px
-}
 
-#task-list div.task-card:hover{
-    color: grey;
-    cursor: pointer;
+div.homepage-body .task-card-overlay {
+    width: 358.831px;
 }
