--- a/f/src/c/progressPage/progressCard.css
+++ b/f/src/c/progressPage/progressCard.css
@@ -31,6 +31,9 @@
     border-radius: 5px;
     margin: 2px 0px;
 }
+.progress-card-overlay:hover {
+    cursor: pointer;
+}
 
 .objective-card-overlay {
     width: 450px;
@@ -43,9 +46,6 @@
 }
 
 /* progress bar */
-.progress-bar{
-    /* border: 1px solid; */
-}
 .progress-bar-fill{
     height: 100%;
     border-radius: 4px 1px 1px 4px;
