Updated f/src/c/progressPage/progressCard.css: Now hover highlights plus icon to green.

--- a/f/src/c/progressPage/progressCard.css
+++ b/f/src/c/progressPage/progressCard.css
@@ -40,6 +40,10 @@
     margin-right: 5px;
 }
 
+.add-entity button:hover{
+    color: rgb(0, 230, 0);
+}
+
 .progress-card-row:hover .add-entity button{
     visibility: visible;
 }
