Updated f/src/c/entityCard.jsx and f/src/c/InforCards/infoCards.css: integrated TaskInfoCard, ObjectiveInfoCard, and ProjectInfoCard components for enhanced entity display and added chooseInfoCard function for conditional rendering. Also styled conditional visibility of the info bubble when hovering over entity card.

--- a/f/src/c/InfoCards/infoCard.css
+++ b/f/src/c/InfoCards/infoCard.css
@@ -21,6 +21,11 @@
     font-weight: bold;
 }
 
+/*Trigger info card visibility*/
 div.task-row:hover .hover-info-card-overlay{
+    visibility: visible;
+}
+
+div.entity-row:hover .hover-info-card-overlay{
     visibility: visible;
 }
