Updated f/src/c/progressPage/progressCard.jsx and f/src/c/InfoCards/infoCard.css: Integrated TaskInfoCard, ObjectiveInfoCard, and ProjectInfoCard display info card on progress card hover.

--- a/f/src/c/InfoCards/infoCard.css
+++ b/f/src/c/InfoCards/infoCard.css
@@ -29,3 +29,7 @@ div.task-row:hover .hover-info-card-overlay{
 div.entity-row:hover .hover-info-card-overlay{
     visibility: visible;
 }
+
+div.progress-card-overlay:hover .hover-info-card-overlay{
+    visibility: visible;
+}
