--- a/f/src/c/entityForm.css
+++ b/f/src/c/entityForm.css
@@ -85,9 +85,10 @@ input {
     /* border: none; */
 }
 
-input[type="datetime-local"] {
-    appearance: auto; /* Reset to default */
-  }
+input[type="date"]::-webkit-calendar-picker-indicator,
+input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+    filter: invert(1); /* Invert colours to make calendar picker visible on white backgrounds */
+}
 
 label {
     text-align: right;
