--- a/f/src/c/login.css
+++ b/f/src/c/login.css
@@ -10,7 +10,6 @@ div.form-div {
     display: flex;
     margin: 0px;
     /* border: 1px solid; */
-    width: 312px;
 }
 
 
@@ -29,8 +28,11 @@ form.login-form {
 }
 
 input {
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    border-radius: 4px;
+    margin-left: 4px;
 }
 
 label {
