--- a/f/src/c/signUp.css
+++ b/f/src/c/signUp.css
@@ -29,8 +29,11 @@ form.sign-up-form {
 }
 
 input {
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    border-radius: 4px;
+    margin-left: 4px;
 }
 
 label {
