--- a/f/src/c/kanban/kanbanColumn.css
+++ b/f/src/c/kanban/kanbanColumn.css
@@ -4,6 +4,7 @@ div.kanban-column {
     border-radius: 5px;
     border: 1px solid;
     background-color: rgb(30, 23, 36);
+    min-height: 400px
 }
 
 div.kanban-item-overlay {
