--- a/f/src/c/progressPage/progressCard.css
+++ b/f/src/c/progressPage/progressCard.css
@@ -78,6 +78,7 @@
 .progress-bar-fill{
     height: 100%;
     border-radius: 4px 1px 1px 4px;
+    /* border: 1px solid; */
 }
 
 .progress-card-content{
@@ -93,12 +94,11 @@
 
     /* border: 1px solid; */
     border-radius: 5px;
-    width: 100%;
+    /* width: 100%; */
     text-align: left;
     transition: width 0.5s ease-out;
     padding-left: 5px;
-    margin-right: 5px;
-
+    /* padding-right: 5px; */
 }
 
 .progress-card-tools{
