Created the section of the main body of the planner page that focuses on the Scheduled tasks.

--- a/f/src/c/InfoCards/infoCard.css
+++ b/f/src/c/InfoCards/infoCard.css
@@ -33,3 +33,7 @@ div.entity-row:hover .hover-info-card-overlay{
 div.progress-card-overlay:hover .hover-info-card-overlay{
     visibility: visible;
 }
+
+div.planner-task-card-overlay:hover .hover-info-card-overlay{
+    visibility: visible;
+}
