--- a/f/src/c/plannerPage/taskCard.css
+++ b/f/src/c/plannerPage/taskCard.css
@@ -12,7 +12,6 @@ div.planner-task-card-content{
     -webkit-line-clamp: 2;
     line-clamp: 2;
     -webkit-box-orient: vertical;
-
 }
 
 
@@ -23,7 +22,8 @@ div.planner-task-card-overlay{
 }
 
 div.planner-task-card-content{
-    min-width: 237px;
+    /* min-width: 237px; */
+    width: 100%
 }
 
 div.planner-task-card-content:hover{
