--- a/f/src/c/plannerPage/parentCard.css
+++ b/f/src/c/plannerPage/parentCard.css
@@ -1,40 +1,64 @@
-div.parent-card-container{
-    margin: 0 0px 5px 0px;
-    border-radius: 4px;
+div.planner-parent-title-row{
     text-align: left;
-    padding: 0 px 0 4px;
-
-
-    overflow: hidden;
-    text-overflow: ellipsis; 
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    line-clamp: 2;
-    -webkit-box-orient: vertical;
-    margin: 5px;
+    padding: 0px 5px 0px 5px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 0px 2px 0px;
 }
 
 div.planner-parent-card-title{
     /* border:1px solid; */
+    border: 1px solid;
+    border-radius: 4px;
+
     padding: 0 0 0 2px;
     cursor: pointer;
+    width: 100%;
 
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
-.mutate-entity button{
+
+div.planner-parent-title-row i {
     visibility: hidden;
     background-color: rgba(0,0,0,0);
+    cursor: pointer;
     border: none;
     padding:2px;
-    margin: 0px 5px 0px 5px;
 }
 
-.mutate-entity button:hover{
-    color: rgb(0, 230, 0);
+
+div.planner-project-container {
+    /* border: 1px solid; */
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
 }
 
-div.planner-parent-title-row{
-    border: 1px solid;
-    /* display: flex;
-    justify-content: space-between;*/
+div.planner-objective-container {
+    /* border: 1px solid; */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+div.planner-project-container .planner-project-title-row {
+    width: 370px;
+}
+div.planner-project-container .planner-objective-title-row {
+    width: 340px;
+}
+
+div.planner-project-container .planner-task-card-overlay {
+    /* border: 1px solid; */
+    width: 320px;
+    translate: -5px 0px
+}
+
+div.planner-parent-title-row:hover i{
+    visibility: visible;
 }
