Updated planner page: 1) Dynamically resized the height of the planner body based on the maximum of the minPlannerHeight, sidebar height and scheduled-section height. 2) Reduced the number of line allowed for the description of tasks in the unsheduled section from 2 to 1.  3) Set the min-width of the planner body to prevent dateCard distorsion. 4) Created a local context provider to reduce the length of the props use in each component in the future.

--- a/f/src/c/plannerPage/parentCard.css
+++ b/f/src/c/plannerPage/parentCard.css
@@ -40,7 +40,6 @@ div.planner-parent-title-row  i.dropdown-btn {
     font-size: larger;
 }
 
-
 div.planner-project-container {
     /* border: 1px solid; */
     display: flex;
@@ -53,6 +52,14 @@ div.planner-objective-container {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+}
+
+div.planner-objective-container .planner-task-card-content{
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 div.planner-project-container .planner-project-title-row {
