--- a/f/src/c/plannerPage/dateCard.css
+++ b/f/src/c/plannerPage/dateCard.css
@@ -40,6 +40,7 @@ div.date-card-title{
     width: 100%;
     text-align: left;
     font-weight: bold;
+    cursor: pointer;
     /* z-index: 1; */
 }
 
