Updated planner page: 1) Add arrows in the in the Period option of the settings box that allow the user to navigate across periods. 2) Created a date utils module to migrate all date funcitons used in plannerPage.

--- a/f/src/c/plannerPage/settingsBox.css
+++ b/f/src/c/plannerPage/settingsBox.css
@@ -21,6 +21,13 @@ div.planner-settings-box span{
 
 div.planner-settings-period{
     display: flex;
+    align-items: center;
+}
+
+div.planner-settings-period i.period-navigator {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 }
 
 div.planner-settings-box input{
