Updated planner page: 1) Now clicking on the middle arrow button in the Period Setting Option set the period to the current month. 2) Removed some unecessary css from settings and ensured that hovering over any font-awsome icon in the planner page highlights the icon green

--- a/f/src/c/plannerPage/plannerPage.css
+++ b/f/src/c/plannerPage/plannerPage.css
@@ -1,3 +1,7 @@
+div.planner-page i:hover {
+    color: rgb(0, 230, 0)
+}
+
 div.planner-page-header-2 {
     margin-top:5px;
     margin-bottom: 5px;
