Updated entity forms: Stopped form labels highlighting when user double clicks outside the form

--- a/f/src/c/modal.css
+++ b/f/src/c/modal.css
@@ -28,6 +28,10 @@ div.modal-content {
     border-color: red; */
 }
 
+div.modal-content div.field-title{
+    user-select: none;
+}
+
 button.modal-close-btn{
     position: absolute;
     background: none;
