updated entity form: made scroll bar for warning message only show when reuquired.

--- a/f/src/c/forms/entityForm.css
+++ b/f/src/c/forms/entityForm.css
@@ -135,11 +135,12 @@ div.form-buttons div.form-input-warning{
     font-size: smaller;
     border: none;
     color: red;
-    overflow-y: scroll;
     width: 350px;
     height: 43px;
     margin-right: 20px;
     text-align: center;
+    /*enable vertical scrolling */
+    overflow-y: auto;
     scrollbar-width: thin;
     scrollbar-color: #888 transparent;
 }
