--- a/f/src/c/plannerPage/parentCard.css
+++ b/f/src/c/plannerPage/parentCard.css
@@ -48,7 +48,6 @@ div.planner-project-container {
 }
 
 div.planner-objective-container {
-    /* border: 1px solid; */
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -69,7 +68,7 @@ div.planner-project-container .planner-objective-title-row {
     width: 340px;
 }
 
-div.planner-project-container .planner-task-card-overlay {
+div.planner-project-container .planner-task-title-row {
     /* border: 1px solid; */
     width: 320px;
     translate: -5px 0px
