--- a/f/src/c/plannerPage/unscheduledSidebar.css
+++ b/f/src/c/plannerPage/unscheduledSidebar.css
@@ -1,10 +1,11 @@
 div.planner-unscheduled-container{
     border: 1px solid white;
     border-radius: 10px;
-    width: 380px;
-    min-height: 500px;
-    margin: 0 5px 0 0;
-    /* background-color: rgb(30, 23, 36); */
+    width: 100%;
+    height: 445px;
+    margin: 0 0px 0 0px;
     background-color: rgba(48, 48, 100, 1);
-    /* background-color: rgb(30, 23, 36); */    
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #888 transparent;
 }
