fixed bug in planner page where info card of an entity in the sidebar's unschedueld section was drifting down relative to its entity as you scroll down the unscheduled section. Fixed this by tracking the scroll of the unscheduled section and minusing the vertical movement from the info card translation.

--- a/f/src/c/plannerPage/unscheduledSidebar.css
+++ b/f/src/c/plannerPage/unscheduledSidebar.css
@@ -1,11 +1,12 @@
-div.planner-unscheduled-container{
+div.planner-unscheduled-container-scroller-wrapper{
     border: 1px solid white;
     border-radius: 10px;
-    width: 100%;
+    max-width: 100%;
     height: 445px;
     margin: 0 0px 0 0px;
     background-color: rgba(48, 48, 100, 1);
     overflow-y: auto;
+    overflow-x:hidden;
     scrollbar-width: thin;
     scrollbar-color: #888 transparent;
 }
