Updated planner page: Ensured dragging tasks to/from the unscheduled section disabled the scrolling of the unscheduled section. This makes it easier to drag task to/from the section.

--- a/f/src/c/plannerPage/plannerPage.css
+++ b/f/src/c/plannerPage/plannerPage.css
@@ -27,9 +27,9 @@ div.planner-body{
     border-radius: 10px;
     min-height: 700px;
     min-width: 1500px;
-    max-width: 1550px;
     background-color: rgb(30, 23, 36);
     padding: 10px 10px 10px 10px;
+    user-select: none;
 }
 
 div.planner-side-bar{
